local-exec/ec2.tf
resource "aws_instance" "app" {
  ami = data.aws_ami.amazon_linux.id
  vpc_security_group_ids = [aws_security_group.practicetf.id]
  instance_type = "t2.micro"
  tags = {
    Name = "my_instance"
  }
  provisioner "local-exec" {
    command = "echo server IP address: ${self.private_ip}"
  }
}


resource "aws_security_group" "practicetf" {
  name        = "practice_sg"
  tags = {
    Name = "practice_sg"
  }

  ingress {
    description = "Allow ssh port"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    # ipv6_cidr_blocks = ["::/0"]
  }
  
  ingress {
    description = "Allow nginx port"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    # ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    # ipv6_cidr_blocks = ["::/0"]
  }
}
